Fixed image alignment issues.

--- a/templates/qmn_base.css
+++ b/templates/qmn_base.css
@@ -136,11 +136,13 @@ label.inline .mlw_qmn_question,
 .quiz_section .qmn_radio_answers label,
 .quiz_section .qmn_check_answers label,
 .quiz_section .qmn_accept_answers label {
-  display: inline;
-  margin: 0 10px 0 5px;
+  display: inline-block;
+  margin: 0 5px;
+  padding: 0;
   font-weight: normal;
   font-size: 14px;
   cursor: pointer;
+  max-width: calc(100% - 40px);
 }
 
 .quiz_section.text-block h2 {
@@ -216,7 +218,7 @@ border: 1px solid #e3e3e3;
 .qsm-results-page .qmn_image_option input[type="radio"],
 .qsm-results-page .qmn_image_option input[type="checkbox"],
 .quiz_section .qmn_image_option input[type="radio"],
-.quiz_section .qmn_image_option input[type="checkbox"] {margin: 4px;}
+.quiz_section .qmn_image_option input[type="checkbox"] {margin: 0 0 4px;}
 
 /* Alerts and error state */
 
