--- a/templates/qmn_primary.css
+++ b/templates/qmn_primary.css
@@ -160,9 +160,11 @@ label.inline .mlw_qmn_question,
 .quiz_section .qmn_accept_answers label {
   display: inline-block;
   margin: 0 5px;
+  padding: 0;
   font-weight: normal;
   font-size: 14px;
   cursor: pointer;
+  max-width: calc(100% - 40px);
 }
 
 .quiz_section.text-block h2 {
@@ -264,7 +266,9 @@ label.inline .mlw_qmn_question,
 .qsm-results-page .qmn_image_option input[type="radio"],
 .qsm-results-page .qmn_image_option input[type="checkbox"],
 .quiz_section .qmn_image_option input[type="radio"],
-.quiz_section .qmn_image_option input[type="checkbox"] {margin: 4px;}
+.quiz_section .qmn_image_option input[type="checkbox"] {
+    margin: 0 0 4px;
+}
 
 /* Alerts and error state */
 
